fixing sections not showing up as centered on the page

--- a/styles/site.css
+++ b/styles/site.css
@@ -503,7 +503,8 @@ nav a, footer a {
 
 
 section {
-  margin-inline: 30px;
+  margin-inline: auto;
+  padding-inline: 30px;
   margin-block-end: 30px;
   box-sizing: border-box;
   display: flex;
